# TrustSphere-SOC

./: .gitignore  README.md  RUN_TRUSTSPHERE.ps1  pyproject.toml
anomaly_detection/feature_engineering/: behavioral_features.py
anomaly_detection/models/: behavioral_anomaly_model.py  entity_anomaly_ensemble.py  entity_baseline_model.py
anomaly_detection/scoring/: entity_behavior_scorer.py
backend/: README.md  __init__.py  config.py  main.py  models.py  security.py  services.py  state.py
configs/: asset_context.json  dataset_registry.json  llm_config.json
correlation/: incident_builder.py
correlation/attack_graph/: evidence_bundle.py
correlation/entity_resolution/: deduplicator.py  event_signature.py
correlation/models/: incident.py
docs/: anomaly-detection-entity-models.md  feedback-loop-hardening.md  incident-correlation.md  incident-prioritization.md  offline-llm-playbooks.md  phase1-data-foundation.md  phase2-ingestion-normalization.md  phase3-prefiltering.md
frontend/: middleware.js  package-lock.json  package.json
frontend/app/: layout.js  (+2 more)
prefiltering/: pipeline.py
scripts/: RUN_COMMANDS.md  build_seed_models.py  check_ollama_ready.py  export_retraining_signals.py  frontend_live_ingestion.py  generate_ps1_disruptions.py  prepare_phase1_data.py  record_analyst_feedback.py  run_entity_anomaly_demo.py  run_incident_correlation_demo.py  run_normalization_demo.py  run_playbook_demo.py  run_prefilter_demo.py  run_prioritization_demo.py  start_trustsphere_stack.ps1  train_entity_anomaly_models.py  train_prefilter_models.py  validate_ps1_baseline.py
(+66 files in other folders)
